argo/apps/media/lidarr/service.yaml
# apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 80
      targetPort: 8686
