argo/apps/media/lidarr/ingress.yaml
# apps/lidarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.smeyer.ca`)
      kind: Rule
      services:
        - name: lidarr
          port: 80
  tls:
    certResolver: letsencrypt
